# vorbis

./: CMakeLists.txt
cmake/template/: Config.cmake.in
lib/: CMakeLists.txt
